--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -35,7 +35,7 @@ Arama - Engin Elektronik
 <div class="container">
 <div class="row">
 	<aside class="col-md-3 md:flex" style="margin-left: -15px;">
-<div class="flex card w-72">
+<div class="flex card w-72" style="height:1750px;">
 	<article class="filter-group">
 		<header class="card-header">
 			<i class="icon-control fa fa-list"></i>
