--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 	<div class="row">
 
 		<aside class="col-md-3 md:flex" style="margin-left: -15px;">
-	<div class="flex card w-72">
+	<div class="flex card w-72" style="height:1750px;">
 		<article class="filter-group">
 			<header class="card-header">
 				<i class="icon-control fa fa-list"></i>
