--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>{% block title %}{% endblock %}</title>
-<meta name="description" content="{% block description %}Tv satışı-tamiri, kart satışı-tamiri, kumanda satışı-tamiri, tv ayak satışı, 2.el tv satışı, kablo satışı, uydu alıcısı satışı, android box-kutu satışı{% endblock %}">
-<meta name="keywords" content="{% block keywords %}engin elektronik, engin elektronik tv hastanesi, televizyon, tv, kumanda, tv tamiri, televizyon kanalı, uydu ayarlama, kanal sıralama, kanal listeleme, android box, android kutu, televizyon ayağı, tv ayağı, istanbul bağcılar, istanbul yüzyıl, elektronik ürünler, elektronik, tv kartı, televizyon kart tamiri, tv uydu, tv parçası{% endblock %}">
+<meta name="description" content="{% block description %}Tv satışı-tamiri, kart satışı-tamiri, kumanda satışı-tamiri, tv ayak satışı, 2.el tv satışı, tv kablo satışı, uydu alıcısı satışı, android box-kutu satışının yapıldığı yer{% endblock %}">
+<meta name="keywords" content="{% block keywords %}enginelektronik,engin elektronik,engin elektronik tv hastahanesi,engin elektronik tv.hastahanesi{% endblock %}">
 <meta name="robots" content="index, follow">
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
