--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 
 <!-- Font awesome 5 -->
-<link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
-<script src="https://kit.fontawesome.com/bd373dca15.js" crossorigin="anonymous" async></script>
+<link href="{% static 'fonts/fontawesome/css/all.css' %}" type="text/css" rel="stylesheet">
 
 <!-- custom style -->
 <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
