--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -91,7 +91,7 @@
 
 		<a href="https://wa.me/905451973471" target="_blank">
 			<button type="button" class="btn bg-emerald-600 hover:bg-emerald-700 text-white focus:ring-3 mt-3">
-				<i class="fa fa-whatsapp"></i> Whatsapp Sipariş (0545-197-3471)</button></a>
+				<i class="fa fa-phone"></i> Whatsapp Sipariş (0545-197-3471)</button></a>
 		{% endif %}
 
 </article> <!-- product-info-aside .// -->
