--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,10 +10,10 @@
     <ul class="navbar-nav mr-auto">
     </ul>
 
-    <span><i class="fa fa-whatsapp"></i> (0545)197-3471&nbsp;&nbsp;</span>
+    <span><i class="fa fa-phone"></i> (0545)197-3471&nbsp;&nbsp;</span>
 
     <a class="nav-link pl-0" href="https://www.google.com/maps/place/100.+Y%C4%B1l,+27.+Sk.+No:3,+34204+Ba%C4%9Fc%C4%B1lar%2F%C4%B0stanbul/@41.0602878,28.8544337,17z/data=!3m1!4b1!4m5!3m4!1s0x14caa553fa561565:0x1b20b973a5dcf7c0!8m2!3d41.0602878!4d28.8544337" target="_blank">
-      <i class="fa fa-map-marker"></i> 100. Yıl, 27. Sk. No:3 Bağcılar/İstanbul</a>
+      <i class="fa fa-map-marker-alt"></i> 100. Yıl, 27. Sk. No:3 Bağcılar/İstanbul</a>
       <span><i class="fa-solid fa-clock"></i> Hergün 10:00/21:00</span>
 
   </div> <!-- navbar-collapse .// -->
