--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -59,14 +59,14 @@
 	<td style="padding-top:5px">
 
 			<div class="input-group-prepend">
-			<a href="{% url 'remove_cart' cart_item.product_id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i></a>
+			<a href="{% url 'remove_cart' cart_item.product_id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus-circle"></i></a>
 			</div>
 			<span class="ml-3 font-semibold text-xl text-center" style="padding-top:5px">{{ cart_item.quantity }}</span>
 
 
 		<form action="{% url 'add_cart' cart_item.product_id %}" method="POST">
 			{% csrf_token %}
-		<button class="btn btn-light -ml-15 mt-0" type="submit" id="button-minus"> <i class="fa fa-plus"></i></button>
+		<button class="btn btn-light -ml-15 mt-0" type="submit" id="button-minus"> <i class="fa fa-plus-circle"></i></button>
 		</form>
 					<a href="{% url 'remove_cart_item' cart_item.product_id cart_item.id %}" class="btn btn-danger -ml-1 mt-2 " style="">Sil</a>
 	</td>
@@ -96,7 +96,7 @@
 
 			<a href="https://wa.me/905451973471" target="_blank">
 				<button type="button" class="btn bg-emerald-600 hover:bg-emerald-700 text-white focus:ring-3 mt-1">
-					<i class="fa fa-whatsapp"></i> Whatsapp Sipariş (0545-197-3471)</button></a>
+					<i class="fa fa-phone"></i> Whatsapp Sipariş (0545-197-3471)</button></a>
 
 			{% else %}
 			<a href="{% url 'checkout' %}" class="btn btn-primary btn-block mt-4"> Sipariş Ver</a>
