--- a/templates/orders/order_completed.html
+++ b/templates/orders/order_completed.html
@@ -9,10 +9,10 @@
 <div class="row">
 	<aside class="col-lg-9">
     <div class="card">
-      <h4 class="text-xl">Sayın, {{ user.first_name }} {{  user.last_name }}</h4>
+      <h4 class="text-xl">Sayın, {{ user.first_name }}</h4>
       <hr>
         <h3 class="text-xl">Siparişiniz Bize Gönderildi!</h3>
-				<h3 class="text-xl">Emailinize Gelen Bilgi Mesajınızı Kontrol Ediniz..</h3> 
+				<h3 class="text-xl">Emailinize Gelen Bilgi Mesajınızı Kontrol Ediniz..</h3>
         <h3 class="text-xl">Sipariş Kodunuz: {{ order.order_number }}</h3>
 
     </div>
