--- a/templates/orders/order_recieved_email.html
+++ b/templates/orders/order_recieved_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 
-Sayın {{user.first_name}} {{user.last_name}}, Siparişiniz Gönderildi!
+Sayın {{user.first_name}}, Siparişiniz Gönderildi!
 
 SİPARİŞ KODUNUZ:  {{ order.order_number }}
 En kısa sürede sipariş ulaşımı hakkında telefon ile  bilgilendirilceksiniz.
