--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -15,7 +15,7 @@
 		<article class="card">
 		<header class="card-header">
 			<strong class="d-inline-block mr-3">Giriş Yapıldı: </strong>
-			<span>{{ user.first_name }} {{ user.last_name }}</span>
+			<span>{{ user.first_name }}</span>
 		</header>
 		<div class="card-body">
 			<div class="row">
