--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -22,13 +22,9 @@
 
 						<div class="form-row">
 							<div class="form-group col-md-6">
-								<label>Ad</label>
+								<label>Ad Soyad</label>
 								{{ user_form.first_name }}
 								</div>
-								<div class="form-group col-md-6">
-									<label>Soyad</label>
-									{{ user_form.last_name }}
-									</div>
 									</div>
 
 										<div class="form-group">
