--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -18,14 +18,11 @@
 			{% csrf_token %}
 			<div class="form-row">
 					<div class="col form-group">
-						<label>Ad</label>
+						<label>Ad Soyad:</label>
 						{{ form.first_name }}
 					</div> <!-- form-group end.// -->
 
-					<div class="col form-group">
-						<label>Soyad</label>
-						{{ form.last_name }}
-					</div> <!-- form-group end.// -->
+
 			</div> <!-- form-row end.// -->
 
 				<div class="form-row">
