--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,11 @@
 <meta http-equiv="cache-control" content="max-age=604800" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>{% block title %}{% endblock %}</title>
-<meta name="description" content="{% block description %}Tv satışı-tamiri, kart satışı-tamiri, kumanda satışı-tamiri, tv ayak satışı, 2.el tv satışı, tv kablo satışı, uydu alıcısı satışı, android box-kutu satışının yapıldığı yer{% endblock %}">
-<meta name="keywords" content="{% block keywords %}enginelektronik,engin elektronik,engin elektronik tv hastahanesi,engin elektronik tv.hastahanesi{% endblock %}">
+<meta name="description" content="{% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}">
+<meta name="keywords" content="{% block keywords %}engin elektronik,engin e,engin el,engin ele,engin elek,engin elekt,engin elektr,engin elektro,engin elektron,engin elektroni,enginelektronik,engin elektronik tv,engin elektronik tv hastanesi{% endblock %}">
 <meta name="robots" content="index, follow">
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
-<meta name="referrer" content="unsafe-url" />
+<meta name="referrer" content="unsafe-url" /> <!-- csrf mobil için -->
 <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
 <link rel="canonical" href="{{ CANONICAL_PATH }}" />
 
