--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 
 {% load static %}
 
-{% block description %}Tv satışı-tamiri, kart satışı-tamiri, kumanda satışı-tamiri, tv ayak satışı, iptv cihaz satışı-kodu, 2.el tv satışı, kablo satışı, uydu alıcısı satışı{% endblock %}
-{% block keywords %}enginelektronik,engin elektronik,engin elektronik tv hastahanesi,engin elektronik tv.hastahanesi{% endblock %}
+{% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}
+{% block keywords %}engin elektronik,engin e,engin el,engin ele,engin elek,engin elekt,engin elektr,engin elektro,engin elektron,engin elektroni,enginelektronik,engin elektronik tv,engin elektronik tv hastanesi{% endblock %}
 {% block title %}Engin Elektronik Tv.Hastanesi {% endblock %}
 
 
