--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,19 @@
 {% load static %}
 
 <!DOCTYPE HTML>
-<html lang="tr">
+<html lang="tr" />
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8" />
 <meta http-equiv="pragma" content="no-cache" />
 <meta http-equiv="cache-control" content="max-age=604800" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 <title>{% block title %}{% endblock %}</title>
-<meta name="description" content="{% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}">
-<meta name="keywords" content="{% block keywords %}engin elektronik,engin e,engin el,engin ele,engin elek,engin elekt,engin elektr,engin elektro,engin elektron,engin elektroni,enginelektronik,engin elektronik tv,engin elektronik tv hastanesi{% endblock %}">
-<meta name="robots" content="index, follow">
+<meta name="description" content="{% block description %}Engin Elektronik tv satış-tamiri, tv kart satış-tamiri, kumanda satış-tamiri, tv ayak satış, 2.el tv satış, tv kablo satış, uydu alıcısı satış, android box satış, hoparlör tamirinin yapıldığı yer{% endblock %}" />
+<meta name="keywords" content="{% block keywords %}engin elektronik,engin e,engin el,engin ele,engin elek,engin elekt,engin elektr,engin elektro,engin elektron,engin elektroni,enginelektronik,engin elektronik tv,engin elektronik tv hastanesi{% endblock %}" />
+<meta name="robots" content="index, follow" />
 <meta name="google-site-verification" content="6L2RD__lUdlr8X2lTzgKzJfS6nDDCbCe6DoskQGwL1c" />
 <meta name="referrer" content="unsafe-url" /> <!-- csrf mobil için -->
-<link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon">
+<link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon" />
 <link rel="canonical" href="{{ CANONICAL_PATH }}" />
 
 
@@ -31,13 +31,13 @@
 <script src="https://cdn.tailwindcss.com"></script>
 
 <!-- Font awesome 5 -->
-<link href="{% static 'fonts/fontawesome/css/all.css' %}" type="text/css" rel="stylesheet">
+<link href="{% static 'fonts/fontawesome/css/all.css' %}" type="text/css" rel="stylesheet" />
 
 <!-- custom style -->
-<link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css"/>
-<link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)"/>
+<link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
-<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css"/>
+<link href="{% static 'css/custom.css' %}" rel="stylesheet" type="text/css" />
 
 
 <!-- HTMX -->
