--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,14 +5,14 @@
 	<div class="container">
 		<section class="footer-bottom border-top row flex">
 			<div class="col-md-3 pl-0 mr-10">
-				<span class="ml-1">&copy Engin Elektronik</span>
+				<span class="ml-1">{{ setting.copy }}</span>
 			</div>
 
 
-				<span class="ml-1"><i class="fa fa-phone"></i> (0545)197-3471</span>&nbsp;&nbsp;
+				<span class="ml-1"><i class="fa fa-phone"></i> {{ setting.telefon }}</span>&nbsp;&nbsp;
 				<a class="ml-1" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
-					<i class="fa fa-map-marker-alt"></i> 100. Yıl, 27. Sk. No:3 Bağcılar/İstanbul</a>&nbsp;&nbsp;
-					<span class="ml-1"><i class="fa-solid fa-clock"></i> Hergün 10:00/21:00</span>
+					<i class="fa fa-map-marker-alt"></i> {{ setting.adres }}</a>&nbsp;&nbsp;
+					<span class="ml-1"><i class="fa-solid fa-clock"></i> {{ setting.saat }}</span>
 
 		</section>
 	</div><!-- //container -->
