--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,12 +10,12 @@
     <ul class="navbar-nav mr-auto">
     </ul>
 
-    <span><i class="fa fa-phone"></i> (0545)197-3471&nbsp;&nbsp;</span>
+    <span><i class="fa fa-phone"></i> {{ setting.telefon }}&nbsp;&nbsp;</span>
 
 
     <a class="nav-link pl-0" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
-      <i class="fa fa-map-marker-alt"></i> 100. Yıl, 27. Sk. No:3 Bağcılar/İstanbul</a>
-      <span><i class="fa-solid fa-clock"></i> Hergün 10:00/21:00</span>
+      <i class="fa fa-map-marker-alt"></i> {{ setting.adres }}</a>
+      <span><i class="fa-solid fa-clock"></i> {{ setting.saat }}</span>
 
   </div> <!-- navbar-collapse .// -->
 </div> <!-- container //  -->
