--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,16 +5,16 @@
 	<div class="container">
 		<section class="footer-bottom border-top row flex">
 			<div class="col-md-3 pl-0 mr-10">
-				{% for setting in setting %}
-				<span class="ml-1">{{ setting.copy }}</span>
+
+				<span class="ml-1">{{ ayarlar.copy }}</span>
 			</div>
 
 
-				<span class="ml-1"><i class="fa fa-phone"></i> {{ setting.telefon }}</span>&nbsp;&nbsp;
+				<span class="ml-1"><i class="fa fa-phone"></i> {{ ayarlar.telefon }}</span>&nbsp;&nbsp;
 				<a class="ml-1" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
-					<i class="fa fa-map-marker-alt"></i> {{ setting.adres }}</a>&nbsp;&nbsp;
-					<span class="ml-1"><i class="fa-solid fa-clock"></i> {{ setting.saat }}</span>
-{% endfor %}
+					<i class="fa fa-map-marker-alt"></i> {{ ayarlar.adres }}</a>&nbsp;&nbsp;
+					<span class="ml-1"><i class="fa-solid fa-clock"></i> {{ ayarlar.saat }}</span>
+
 		</section>
 	</div><!-- //container -->
 </footer>
