--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,12 +10,12 @@
     <ul class="navbar-nav mr-auto">
     </ul>
 
+{% for ayarlar in ayarlar %}
     <span><i class="fa fa-phone"></i> {{ ayarlar.telefon }}&nbsp;&nbsp;</span>
-
-
     <a class="nav-link pl-0" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
       <i class="fa fa-map-marker-alt"></i> {{ ayarlar.adres }}</a>
       <span><i class="fa-solid fa-clock"></i> {{ ayarlar.saat }}</span>
+{% endfor %}
 
   </div> <!-- navbar-collapse .// -->
 </div> <!-- container //  -->
