--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -21,27 +21,22 @@
 						<label>Ad Soyad:</label>
 						{{ form.first_name }}
 					</div> <!-- form-group end.// -->
-
-
 			</div> <!-- form-row end.// -->
 
 				<div class="form-row">
-					<div class="form-group col-md-6">
-					  <label>Email</label>
+					<div class="col form-group">
+					  <label>Email:</label>
 					 {{ form.email }}
 					</div> <!-- form-group end.// -->
-					<div class="form-group col-md-6">
-					  <label>Telefon</label>
-						{{ form.phone_number }}
-					</div> <!-- form-group end.// -->
 				</div> <!-- form-row.// -->
+
 				<div class="form-row">
 					<div class="form-group col-md-6">
-						<label>Şifre</label>
+						<label>Şifre:</label>
 					 {{ form.password }}
 					</div> <!-- form-group end.// -->
 					<div class="form-group col-md-6">
-						<label>Şifreyi Tekrarla</label>
+						<label>Şifreyi Tekrarla:</label>
 					    {{ form.confirm_password }}
 					</div> <!-- form-group end.// -->
 				</div>
