--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -99,7 +99,13 @@ Arama - Engin Elektronik
 			<figcaption class="info-wrap">
 				<div class="fix-height">
 					<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
-					<a href="{{ product.get_absolute_url }}" class="title">{{ product.product_name }}</a>
+
+					<div style="margin-left: -5px; margin-top: 215px;" class="badge badge-pill badge-light hover:bg-gray-300">
+					<a href="{{ product.category.get_url }}" class="font-semibold hover:text-gray-700 break-all">{{ product.category }}</a>
+					</div>
+
+					<a href="{{ product.get_absolute_url }}" class="title mt-4">{{ product.product_name }}</a>
+
 					<div class="price-wrap mt-2">
 						{% if product.price <= 0 %}
 							<h5 style="color: gray"><b>Stokta kalmadı, sipariş için iletişime geçin</b></h5>
