--- a/templates/list.html
+++ b/templates/list.html
@@ -13,7 +13,7 @@
 					<span class="badge badge-pill badge-light" style="font-size:11px; margin-left: -5px; margin-top:-3px">Stok: {{product.stock}} Adet</span>
 
 					<div style="margin-left: -5px; margin-top: 215px;" class="badge badge-pill badge-light hover:bg-gray-300">
-					<a href="{{ product.category.get_url }}" class="font-semibold hover:text-gray-700 break-all">{{ product.category }}</a>
+					<a href="{{ product.category.get_url }}" class="font-semibold hover:text-gray-700">{{ product.category }}</a>
 					</div>
 
 					<a href="{{ product.get_absolute_url }}" class="title mt-4">{{ product.product_name }}</a>
