--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -9,7 +9,7 @@
 				{% for ayarlar in ayarlar %}
 				<span class="ml-1">{{ ayarlar.copy }}</span>
 			</div>
-				<span class="ml-1"><i class="fa fa-phone"></i> {{ ayarlar.telefon }}</span>&nbsp;&nbsp;
+				<span class="ml-1"><i class="fa fa-phone"></i><a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a></span>&nbsp;&nbsp;
 				<a class="ml-1" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
 					<i class="fa fa-map-marker-alt"></i> {{ ayarlar.adres }}</a>&nbsp;&nbsp;
 					<span class="ml-1"><i class="fa-solid fa-clock"></i> {{ ayarlar.saat }}</span>
