--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -11,7 +11,7 @@
     </ul>
 
 {% for ayarlar in ayarlar %}
-    <span><i class="fa fa-phone"></i> {{ ayarlar.telefon }}&nbsp;&nbsp;</span>
+    <span><i class="fa fa-phone"></i><a href="https://wa.me/905451973471" target="_blank"> {{ ayarlar.telefon }}</a>&nbsp;&nbsp;</span>
     <a class="nav-link pl-0" href="https://goo.gl/maps/U6h5JE1MKjGA6XeK8" target="_blank">
       <i class="fa fa-map-marker-alt"></i> {{ ayarlar.adres }}</a>
       <span><i class="fa-solid fa-clock"></i> {{ ayarlar.saat }}</span>
@@ -63,7 +63,7 @@
   <div class="col-lg  col-md-6 col-sm-12 col">
     <form action="{% url 'search' %}" class="search" method="GET">
       <div class="input-group">
-          <input type="search" class="form-control p-4 hover:bg-white rounded-lg focus:dark:placeholder-white/50 font-normal text-md bg-zinc-100 dark:bg-zinc-800  focus:bg-white focus:dark:bg-zinc-700 border-2 border-zinc-100 dark:!border-zinc-800  placeholder-zinc-400 dark:placeholder-zinc-600 text-black dark:text-white focus:shadow-lg focus:shadow-zinc-300 focus:dark:shadow-black/20 focus:dark:!border-zinc-600 focus:border-zinc-100" placeholder="ürün ara" name="keyword" id="anahtar">
+          <input type="search" class="form-control p-4 hover:bg-white rounded-lg focus:dark:placeholder-white/50 font-normal text-md bg-zinc-100 dark:bg-zinc-800  focus:bg-white focus:dark:bg-zinc-700 border-2 border-zinc-100 dark:!border-zinc-800  placeholder-zinc-400 dark:placeholder-zinc-600 text-black dark:text-white focus:shadow-lg focus:shadow-zinc-300 focus:dark:shadow-black/20 focus:dark:!border-zinc-600 focus:border-zinc-100 cursor-default focus:cursor-text" placeholder="ürün ara" name="keyword" id="anahtar">
           <div class="relative">
         <button type="submit" class="btn absolute z-10 rounded-lg px-4 py-2 bg-blue-600 hover:bg-blue-700 text-white  right-2 bottom-1" aria-label="arama butonu">
           Ara
