--- a/templates/orders/order_completed.html
+++ b/templates/orders/order_completed.html
@@ -11,7 +11,12 @@
     <div class="card">
       <h4 class="text-xl">Sayın, {{ user.first_name }}</h4>
       <hr>
-        <h3 class="text-xl">Siparişiniz Bize Gönderildi!</h3>
+        <h3 class="text-xl">
+					<svg width="24" height="22" viewBox="0 0 24 24" fill="none" stroke="green" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-inline-block">
+					<path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><path d="M22 4 12 14.01l-3-3"></path>
+					<use href="{% static 'images/check-circle.svg' %}" alt="check-circle" />
+				  </svg>
+					Siparişiniz Bize Gönderildi!</h3>
 				<h3 class="text-xl">Emailinize Gelen Bilgi Mesajınızı Kontrol Ediniz..</h3>
         <h3 class="text-xl">Sipariş Kodunuz: {{ order.order_number }}</h3>
 
