--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -13,6 +13,11 @@ Arama - Engin Elektronik
 
 {% block content %}
 
+<!-- kar yağdırma -->
+<div id="snow"
+style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; pointer-events: none; z-index: 0;">
+</div>
+
 <!-- gelişmiş arama yap -->
 					<div class="container">
 Filtreye Göre Ara:
