--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -95,6 +95,9 @@
 			<button type="button" class="btn bg-emerald-600 hover:bg-emerald-700 text-white focus:ring-3 mt-3">
 				<i class="fa fa-phone"></i> Whatsapp Sipariş (0545-197-3471)</button></a>
 		{% endif %}
+<br><br><br>
+<p class="mb-1">Ürün Linki Paylaş:</p>
+<!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
 
 </article> <!-- product-info-aside .// -->
 </form>
