--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -95,10 +95,13 @@
 			<button type="button" class="btn bg-emerald-600 hover:bg-emerald-700 text-white focus:ring-3 mt-3">
 				<i class="fa fa-phone"></i> Whatsapp Sipariş (0545-197-3471)</button></a>
 		{% endif %}
-<br><br><br>
-<p class="mb-1">Ürün Linki Paylaş:</p>
-<!-- ShareThis BEGIN --><div class="sharethis-inline-share-buttons"></div><!-- ShareThis END -->
 
+<br><br><br>
+<div class="rounded w-48 border-slate-100 hover:bg-green-50">
+<p class="mb-1 font-medium">Paylaş:</p>
+<div class="sharethis-inline-share-buttons">
+</div>
+</div>
 </article> <!-- product-info-aside .// -->
 </form>
 		</main> <!-- col.// -->
