--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
 
 {% include "includes/footer.html" %}
 
+<!-- auto complete -->
 <script src="{% static 'js/jquery-ui.min.js' %}"></script>
 <script>
   $( function() {
