--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -20,16 +20,16 @@
 					<form action="" method="POST">
 						{% csrf_token %}
 
-						<div class="form-row">
-							<div class="form-group col-md-6">
+
+							<div class="form-group">
 								<label>Ad Soyad</label>
 								{{ user_form.first_name }}
 								</div>
-									</div>
+
 
 										<div class="form-group">
 											<label>Telefon</label>
-											{{ user_form.phone_number }}
+											{{ profile_form.phone_number }}
 											</div>
 
 											<div class="form-group">
