--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -57,7 +57,7 @@
 
   <div class="dropdown-menu">
     {% for category in links %}
-    <a class="dropdown-item" href="http://127.0.0.1:8000/filter_results/?brand=&category=&yeni=Yeni">Yeni Ürünler</a>
+    <a class="dropdown-item" href="https://www.enginelektronik.xyz/filter_results/?brand=&category=&yeni=Yeni">Yeni Ürünler</a>
     <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
     {% endfor %}
   </div>
